<resources>
    <string name="app_name">Hitung BMI</string>

    <string name="bmi_intro">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="berat_badan">Berat badan (kg)</string>
    <string name="tinggi_badan">Tinggi badan (cm)</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="bagikan_template">Berat badan: %1$s kg\nTinggi badan: %2$s cm\nJenis kelamin: %3$s\n\n%4$s\n%5$s</string>
    <string name="bagikan_saran_template">%1$s kg\n%2$s cm\n%3$s\n\n%4$s\n%5$s</string>
    <string name="hitung">Hitung</string>
    <string name="copyright">Hitung BMI merupakan sebuah aplikasi Android untuk menghitung body mass index (BMI) sehingga seseorang dapat mengetahui apakah berat badannya ideal, gemuk atau kurus.\n\nAplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/indraazimi/hitung-bmi\n\nCopyright © 2021 Indra Azimi.\nAll rights reserved.</string>
    <string name="hitungBmi">Hitung BMI</string>
    <string name="bmi">BMI: %1$.2f</string>
    <string name="reset">Reset</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori">Kategori: %1$s</string>
    <string name="judul_kurus">Mengatasi Kekurusan</string>
    <string name="judul_ideal">Menjaga Tetap Ideal</string>
    <string name="judul_gemuk">Mengatasi Kegemukan</string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini.</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="pilih1">Tulis minimal 1 input.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
    <string name="berat">Berat Badan (Kg): %1$s</string>
    <string name="tinggi">Tinggi Badan (Cm): %1$s</string>
    <string name="gender">Jenis Kelamin: %1$s</string>
    <string name="hasil_histori">BMI: %1$.2f - %2$s</string>
    <string name="data_histori">BB: %1$.1f - TB: %2$.1f - %3$s</string>
    <string name="data_berhasil_di_update">Data berhasil di update.</string>
    <string name="data_berhasil_di_hapus">Data berhasil di hapus.</string>
    <string name="berat_badan_kg">Berat Badan (Kg)</string>
    <string name="tinggi_badan_cm">Tinggi Badan (Cm)</string>
    <string name="lihat_saran">LIHAT SARAN</string>
    <string name="bagikan">Bagikan</string>
    <string name="konfirmasi_hapus_semua_data">Hapus semua histori?</string>
    <string name="konfirmasi_hapus_data">Hapus data ini ?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="menu_share">Share</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="data_tidak_ada">Data tidak ada</string>
    <string name="_8942">⋮</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_data_bmi">Update data BMI:</string>
</resources>