<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintWidth_percent="0.7"
    app:layout_constraintHeight_percent="0.55"
    app:cardCornerRadius="5dp"
    android:background="@android:color/transparent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/update_data_bmi"
                android:textStyle="bold"
                android:textSize="16sp"

                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:hint="@string/berat_badan_kg"
                android:inputType="number"
                android:layout_marginTop="25dp"
                android:autofillHints="Berat Badan" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:hint="@string/tinggi_badan_cm"
                android:inputType="number"
                android:layout_marginTop="25dp"
                android:autofillHints="Tinggi Badan" />

            <TextView
                android:id="@+id/etBerat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:layout_marginTop="25dp"
                android:layout_marginStart="5dp"
                android:textSize="16dp"/>

            <include
                android:id="@+id/rgGender"
                layout="@layout/radiogroup_gender"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBatal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="5dp"
                    android:text="@string/batal"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:textAllCaps="false"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_weight="1"
                    app:cornerRadius="5dp"
                    android:layout_marginStart="5dp"
                    android:textAllCaps="false"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>


    </androidx.cardview.widget.CardView>
