<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.SaranFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/gemuk"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="TextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_badan"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvBb"
        app:layout_constraintStart_toStartOf="@id/tvBb" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/jenis_kelamin"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTb"
        app:layout_constraintStart_toStartOf="@id/tvTb" />

</androidx.constraintlayout.widget.ConstraintLayout>